--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,18 @@ h1{
     text-align: center;
     color: red;
 }
+
+#container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+#container-card{
+    width: 200px;
+    height: 250px;
+
+    border: 1px solid black;
+
+    margin: 10px;
+}
